--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,78 @@
-theme: jekyll-theme-tactile
-
 # Site settings
-url: 'https://sneeuw.github.io'
+site: Ephesus
+title: Ephesus - Minimalist Jekyll Theme
+keywords: ephesus, blog
+description: >-
+  Ephesus - Minimalist Jekyll Theme
+lang: en-US
+timezone: Europe/Istanbul
+repo: https://github.com/onepase/Ephesus # site repo [optional]
+# google_verify: XXX # Put your Google Verification here
+# google_analytics: UA-XXXXXXXX-00 # Put your Google Analytics code
+# discus-identifier: XXX
+
+# Author settings
+author:
+  name: SEOLHEE KIM
+  bio: Computer Engineer
+  picture: assets/images/profile.jpg
+  github: sneeuw # github username
+  twitter: onepase # twitter username
+  facebook: onepase # facebook username
+  instagram: onepase # instagram username
+  youtube: onepase # youtube username
+  linkedin: sneeuw # linkedin username
+  email: sneeuw.sh@gmail.com # email adress
+
+# URL settings
+url: "https://sneeuw.github.io"
+permalink: pretty
+
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
+exclude:
+  - .jekyll-cache
+  - .obsidian
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE.md
+  - README.md
+  - CONTRIBUTING.md
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-relative-links
+paginate: 20
+paginate_path: "/page/:num"
+
+collections:
+  pages:
+    output: true
+    permalink: /:name
+  posts:
+    output: true
+    permalink: /:slug
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+relative_links:
+  enabled: true
+  collections: false
